# gpu-canny

./: .gitignore  CMakeLists.txt  README.md  canny.cu  canny.h  main.cpp  timer.h  utils.cpp  utils.h
